# robo-navigate

./: .gitignore  LICENSE  README.md  fix_gazebo.sh  requirements.txt
robot_gazebo/: CMakeLists.txt  EXACT_COMMANDS.md  FIND_WORKSPACE.md  FIX_INSTALL.md  NEXT_STEPS.md  QUICK_START.md  README.md  RUN_THIS.sh  UBUNTU_SETUP.md  package.xml
robot_gazebo/launch/: gazebo_only.launch.py  gazebo_robot.launch.py  spawn_robot.launch.py
robot_gazebo/scripts/: camera_publisher.py  kafka_streamer.py  lidar_publisher.py  object_detector.py  obstacle_avoidance.py  robot_controller.py
robot_gazebo/src/: lidar_obstacle_detector.cpp
robot_gazebo/src/robot_gazebo/: __init__.py  camera_publisher.py  kafka_streamer.py  kafka_visualizer.py  lidar_publisher.py  object_detector.py  obstacle_avoidance.py
robot_gazebo/urdf/: robot.urdf.xacro
robot_gazebo/worlds/: simple_world.world  test_world.world
